fixed hidden stagenames on firefox

--- a/src/main/resources/css/cdpipeline.css
+++ b/src/main/resources/css/cdpipeline.css
@@ -275,7 +275,6 @@ buildNumber a {
 	overflow: hidden;
 	top: -10.5px;
 	position: relative;
-	text-overflow: ellipsis;
 }
 
 .stageNameContainer:before {
